--- a/server_config.ini
+++ b/server_config.ini
@@ -6,3 +6,4 @@ db = 70-461
 [Tables]
 Mutual_Funds = mf_india
 Mutual_Funds_Scheme = mf_india_scheme_details
+Mutual_Funds_Quality = mf_quality_issues
